--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
     "dev": "vuepress dev docs",
     "docs:build": "vuepress build docs",
     "deploy": "bash deploy.sh"
+  },
+  "dependencies": {
+    "vuepress-theme-ting": "^1.1.8"
   }
 }
