--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "vuepress dev docs",
-    "docs:build": "vuepress build docs",
+    "build": "vuepress build docs",
     "deploy": "bash deploy.sh"
   },
   "dependencies": {
