--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "deploy": "bash deploy.sh"
   },
   "dependencies": {
-    "vuepress-theme-ting": "^1.3.3"
+    "ifresh-ui": "^0.2.2",
+    "vuepress": "^1.9.7",
+    "vuepress-theme-ting": "^3.0.0"
   }
 }
